--- a/House_Prices_Project/Immersive_Data_Science_Project1_EDA_Dimitri.ipynb
+++ b/House_Prices_Project/Immersive_Data_Science_Project1_EDA_Dimitri.ipynb
@@ -253,7 +253,7 @@
     }
    ],
    "source": [
-    "# # show column names \n",
+    "# # show column names - Business - understanding, Data Unterstanding\n",
     "house_price2.head()"
    ]
   },
@@ -2081,7 +2081,7 @@
     }
    ],
    "source": [
-    "# show NaN's\n",
+    "# show NaN's - Data mining and Data cleaning\n",
     "house_price2.isna()"
    ]
   },
